2004-06-30  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcsewerdesign.xml: added section on "Enforce Drainage"
	* dcsewerdesign.enforcedrainage.ave: added optional diameter
	parameter
	* dcsewerdesignextension.make.ave: version number is now 2.0.2+cvs
	
2004-06-29  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcsewerdesign.enforcedrainage.ave:
	* dcsewerdesign.line.findupstreamlines.ave: added new function to
	complete design process
	* doc/en/dcsewerdesign.xml: updated "Accumulate Population" section;
	formatting
	* dcsewerdesign.calculatemaximummanholeelevations.ave: added DEM
	factor; fixed bug that prevented correct calculation of maxium
	manhole elevations
	* dcsewerdesign.calculateminimumelevationdifferences.ave: added 
	possibility to specify gradient field

2004-06-28  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcsewerdesign.accumulatepopulation.ave: added check for precision of
	accumulated population field

2004-03-01  Steffen Macke <Steffen_Macke@dorsch.com.jo>
	
	* COPYING: corrected license
	* AUTHORS: added Amani
	* build.xml:
	* doc/build.xml:
	* doc/docbook.css:
	* doc/docbook.xsl:
	* doc/docbook_html.xsl:
	* doc/docbook_pdf.xsl:
	* doc/project.dtd:
	* doc/en/dcsewerdesign.xml:
	* dcsewerdesign.help.openchm.ave:
	* dcsewerdesignextension.make.ave:
	* script.saveallscripts.ave: prepared 2.0.2 release, added documentation
	* ChangeLog: preparing initial SourceForge release
	
31-10-2002 Steffen Macke <Steffen_Macke@dorsch.com.jo>	Version 1.18
	
	* fixed the "Accumulate Population" function (field selection)
	* changed the snapping radius to 0.1 m
	* added the "Accumulate Branch Length" function

28-08-2002 Steffen Macke <Steffen_Macke@dorsch.com.jo>       Version 1.17

	* added "Enforce Maximum Line Length" function                                               

13-11-2000 Steffen Macke <Steffen_Macke@dorsch.com.jo>        Version 1.16

	* corrections to the Profile creation
